# spinner

./: .gitignore  .gitmodules  Android.cmake  AndroidArm.cmake  AndroidX86.cmake  CMake0.txt  CMakeCommon.txt  CMakeCompiler.txt  CMakeLists.txt  CMakePC.txt  Common.cmake  CopyHeaders.cmake  Linux.cmake  Makefile  Makefile.mk  MinGW.cmake  README  abstbuff.hpp  adaptstd.cpp  adaptstream.hpp  alignedalloc.hpp  argholder.hpp  assoc.hpp  bits.cpp  bits.hpp  charcode.cpp  charvec.hpp  check_macro.hpp  check_smartptr.hpp  chunk.hpp  color.cpp  color.hpp  common.hpp  dgmath.kdev4  dir.cpp  dir.hpp  dir_depLinux.cpp  dir_depLinux.hpp  dir_depWin.cpp  dir_depWin.hpp  (+82 more)
.kdev4/: dgmath.kdev4  spinner.kdev4
random/: matrix.hpp  quat.hpp  rotation.hpp  string.hpp  vector.hpp
serialization/: chars.hpp  chrono.hpp  pair.hpp  smart_ptr.hpp  traits.hpp  unordered_map.hpp
structure/: angle.hpp  bidictionary.hpp  bytearray.hpp  cyclevalue.hpp  dataswitch.hpp  fixstr.hpp  freeobj.hpp  mapvec.hpp  niftycounter.hpp  offsetindex.hpp  profiler.hpp  range.hpp  syncro.hpp  treenode.hpp  valuearray.hpp  wrapper.hpp
tests/: assoc.cpp  assoc.hpp  bidictionary.cpp  color.cpp  emplace.cpp  filetree.cpp  filetree.hpp  filetree_func.cpp  flyweight.cpp  mapvec.cpp  math.cpp  math.hpp  path.cpp  pqueue.cpp  pqueue.hpp  profiler_test.cpp  rectdiff_test.cpp  resource.cpp  resource.hpp  rflag_test.cpp  serialization.cpp  serialization.hpp  sharedflyweight.cpp  sort.cpp  test.cpp  test.hpp  treenode.cpp  valuearray.cpp  watch_test.cpp
unituple/: defines.hpp  operator.hpp
